# Aero-1

./: README.md  tutorial.ipynb
aero_timestamp_asr/: pyproject.toml
aero_timestamp_asr/src/: __init__.py  loader.py  monkey_patch.py
aero_timestamp_asr_pypi/: Makefile  pyproject.toml
aero_timestamp_asr_pypi/aero_timestamp_asr/: __init__.py  loader.py  monkey_patch.py  transcribe.py  utils.py
examples/: timestamp_asr.py
